--- a/lang/ca.json
+++ b/lang/ca.json
@@ -1162,7 +1162,7 @@
     "Verified": "Verificat",
     "Verify Email Address": "Confirmeu la vostra adreça electrònica",
     "Verify this email address": "Verifica aquesta adreça de correu electrònic",
-    "Version :version — commit [:short](:url).": "Versió :version: confirmació [:short](:url).",
+    "Version :version — commit [:short](:url).": "Versió :version — commit [:short](:url).",
     "Via Telegram": "A través de Telegram",
     "Video call": "Videotrucada",
     "View": "Veure",
