--- a/lang/it.json
+++ b/lang/it.json
@@ -1162,7 +1162,7 @@
     "Verified": "Verificato",
     "Verify Email Address": "Verifica indirizzo email",
     "Verify this email address": "Verifica questo indirizzo email",
-    "Version :version — commit [:short](:url).": "Versione :version: conferma [:short](:url).",
+    "Version :version — commit [:short](:url).": "Versione :version — commit [:short](:url).",
     "Via Telegram": "Tramite Telegramma",
     "Video call": "Video chiamata",
     "View": "Visualizzazione",
