--- a/lang/es.json
+++ b/lang/es.json
@@ -1162,7 +1162,7 @@
     "Verified": "Verificado",
     "Verify Email Address": "Confirme su correo electrónico",
     "Verify this email address": "Verifique este correo electronico",
-    "Version :version — commit [:short](:url).": "Versión :version: confirma [:short](:url).",
+    "Version :version — commit [:short](:url).": "Versión :version — commit [:short](:url).",
     "Via Telegram": "Vía telegrama",
     "Video call": "Videollamada",
     "View": "Vista",
