--- a/lang/fr.json
+++ b/lang/fr.json
@@ -410,7 +410,7 @@
     "Enable": "Activer",
     "Enable all": "Activer tout",
     "Ensure your account is using a long, random password to stay secure.": "Assurez-vous d’utiliser un mot de passe long et aléatoire pour sécuriser votre compte.",
-    "Enter a number from 0 to 100000. No decimals.": "Entrez un nombre compris entre 0 et 100 000. Pas de décimales.",
+    "Enter a number from 0 to 100000. No decimals.": "Entrez un nombre compris entre 0 et 100 000. Pas de décimales.",
     "Events this month": "Événements ce mois-ci",
     "Events this week": "Événements cette semaine",
     "Events this year": "Événements cette année",
@@ -1224,14 +1224,14 @@
     "You are invited to join Monica": "Vous êtes invité à rejoindre Monica",
     "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet e-mail car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
     "you can't even use your current username or password to sign in,": "vous ne pouvez même pas utiliser votre nom d’utilisateur ou votre mot de passe actuel pour vous connecter,",
-    "you can't import any data from your current Monica account(yet),": "vous ne pouvez (encore) importer aucune donnée de votre compte Monica actuel,",
-    "You can add job information to your contacts and manage the companies here in this tab.": "Vous pouvez ajouter des informations d’emploi à vos contacts et gérer les entreprises ici dans cet onglet.",
+    "you can't import any data from your current Monica account(yet),": "vous ne pouvez pas (encore) importer de donnée de votre compte Monica actuel,",
+    "You can add job information to your contacts and manage the companies here in this tab.": "Vous pouvez ajouter des informations professionnelles à vos contacts et gérer les entreprises ici dans cet onglet.",
     "You can add more account to log in to our service with one click.": "Vous pouvez ajouter plus de compte pour vous connecter à notre service en un seul clic.",
-    "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "Vous pouvez être averti via différents canaux : e-mails, message Telegram, sur Facebook. Tu décides.",
+    "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "Vous pouvez être averti via différents canaux : e-mails, message Telegram, sur Facebook. C’est vous qui décidez.",
     "You can change that at any time.": "Vous pouvez modifier cela à tout moment.",
     "You can choose how you want Monica to display dates in the application.": "Vous pouvez choisir comment Monica doit afficher les dates dans l’application.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Vous pouvez choisir quelles devises doivent être activées sur votre compte et lesquelles ne doivent pas être activées.",
-    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Vous pouvez personnaliser la façon dont les contacts doivent être affichés en fonction de vos propres goûts/cultures. Peut-être voudriez-vous utiliser James Bond au lieu de Bond James. Ici, vous pouvez le définir à volonté.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Vous pouvez personnaliser la façon dont les contacts doivent être affichés en fonction de vos propres goûts/cultures. Peut-être voudriez-vous utiliser James Bond au lieu de Bond James. Ici vous pouvez le définir à volonté.",
     "You can customize the criteria that let you track your mood.": "Vous pouvez personnaliser les critères qui vous permettent de suivre votre humeur.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Vous pouvez déplacer des contacts entre les coffres-forts. Ce changement est immédiat. Vous ne pouvez déplacer des contacts que vers les coffres dont vous faites partie. Toutes les données des contacts seront déplacées avec.",
     "You cannot remove your own administrator privilege.": "Vous ne pouvez pas supprimer votre propre privilège d’administrateur.",
